--- a/index.html
+++ b/index.html
@@ -3,50 +3,75 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus AI 통합 플랫폼 (API 연동 + Netlify용)</title>
+  <title>AgriNexus API Secure + TFLite Crop + Firebase Functions</title>
   <style>
-    body { font-family: Arial; background: #eef4f8; padding: 2rem; text-align: center; }
-    button { padding: 1rem 1.5rem; margin: 0.5rem; font-size: 1rem; border-radius: 8px; border: none; background: #007c4d; color: white; cursor: pointer; }
-    iframe, .block { width: 100%; max-width: 900px; margin: 1rem auto; padding: 1rem; border-radius: 12px; background: white; box-shadow: 0 0 10px rgba(0,0,0,0.1); display: none; }
-    .block h3 { color: #007c4d; }
+    body { font-family: Arial; background: #eef5f8; padding: 2rem; text-align: center; }
+    input, select, button { padding: 0.7rem; margin: 0.5rem; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; width: 90%; max-width: 500px; }
+    iframe, .section { max-width: 900px; margin: 1rem auto; padding: 1rem; border-radius: 12px; background: white; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    .section h3 { color: #007c4d; }
   </style>
 </head>
 <body>
 
-  <h1>🌾 AgriNexus AI 통합 플랫폼 (실시간 연동)</h1>
+  <h1>🔐 AgriNexus Secure AI & Functions Integration</h1>
 
-  <div>
-    <button onclick="showBlock('gaia')">🌌 Gaia 좌표 시각화</button>
-    <button onclick="showBlock('satellite')">🛰 Sentinel NDVI 실시간 API</button>
-    <button onclick="showBlock('ml')">🤖 작물별 TensorFlow 모델 예측</button>
-    <button onclick="showBlock('firebase')">📊 Firebase 관리자 리포트</button>
+  <div class="section">
+    <h3>🌐 Sentinel API 연동 (API Key 보호)</h3>
+    <input id="apiKey" type="password" placeholder="🔑 Sentinel API Key 입력" />
+    <button onclick="accessSentinel()">Sentinel NDVI 분석 보기</button>
+    <iframe id="sentinelFrame" style="display:none;" src="" width="100%" height="400"></iframe>
   </div>
 
-  <div id="gaia" class="block">
-    <h3>Gaia 기반 스마트팜 위치 시각화</h3>
-    <iframe src="https://agrinexus.world/gaia-sky.html" width="100%" height="400"></iframe>
+  <div class="section">
+    <h3>🌱 작물 분류 모델 선택 (TFLite 기반)</h3>
+    <select id="cropModel">
+      <option value="corn">🌽 옥수수 모델</option>
+      <option value="rice">🌾 벼 모델</option>
+      <option value="tomato">🍅 토마토 모델</option>
+    </select>
+    <button onclick="loadModel()">TensorFlow 예측 페이지 열기</button>
+    <iframe id="modelFrame" style="display:none;" src="" width="100%" height="400"></iframe>
   </div>
 
-  <div id="satellite" class="block">
-    <h3>Sentinel API 기반 NDVI 분석 (실시간)</h3>
-    <iframe src="https://custom-sentinel-api-viewer.vercel.app" width="100%" height="400"></iframe>
-  </div>
-
-  <div id="ml" class="block">
-    <h3>TensorFlow 작물 예측 모델 (작물 분류)</h3>
-    <iframe src="https://agrinexus-crop-tfmodel.netlify.app" width="100%" height="400"></iframe>
-  </div>
-
-  <div id="firebase" class="block">
-    <h3>Firebase 리포트 자동화</h3>
-    <iframe src="https://agrinexus.firebaseapp.com/admin-dashboard" width="100%" height="400"></iframe>
+  <div class="section">
+    <h3>☁️ Firebase Functions 호출 (계약 저장)</h3>
+    <input id="contractText" placeholder="계약 내용을 입력하세요" />
+    <button onclick="submitContract()">Firebase에 저장</button>
+    <div id="functionResult" style="color:#007c4d; margin-top:1rem;"></div>
   </div>
 
   <script>
-    function showBlock(id) {
-      const blocks = document.querySelectorAll(".block");
-      blocks.forEach(b => b.style.display = "none");
-      document.getElementById(id).style.display = "block";
+    function accessSentinel() {
+      const key = document.getElementById("apiKey").value;
+      if (key === "YOUR_VALID_SENTINEL_KEY") {
+        const url = "https://custom-sentinel-api-viewer.vercel.app";
+        document.getElementById("sentinelFrame").src = url;
+        document.getElementById("sentinelFrame").style.display = "block";
+      } else {
+        alert("❌ 잘못된 API Key입니다.");
+      }
+    }
+
+    function loadModel() {
+      const model = document.getElementById("cropModel").value;
+      const urls = {
+        corn: "https://agrinexus-corn-tfmodel.netlify.app",
+        rice: "https://agrinexus-rice-tfmodel.netlify.app",
+        tomato: "https://agrinexus-tomato-tfmodel.netlify.app"
+      };
+      document.getElementById("modelFrame").src = urls[model];
+      document.getElementById("modelFrame").style.display = "block";
+    }
+
+    async function submitContract() {
+      const text = document.getElementById("contractText").value;
+      const res = await fetch("https://us-central1-your-project.cloudfunctions.net/saveContract", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ content: text })
+      });
+      const data = await res.json();
+      document.getElementById("functionResult").innerText = "✅ 저장됨: " + data.status;
     }
   </script>
 
