--- a/index.html
+++ b/index.html
@@ -2,76 +2,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>AgriNexus API Secure + TFLite Crop + Firebase Functions</title>
+  <meta charset="UTF-8">
+  <title>AgriNexus Realtime AI + Firebase Auth</title>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
-    body { font-family: Arial; background: #eef5f8; padding: 2rem; text-align: center; }
-    input, select, button { padding: 0.7rem; margin: 0.5rem; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; width: 90%; max-width: 500px; }
-    iframe, .section { max-width: 900px; margin: 1rem auto; padding: 1rem; border-radius: 12px; background: white; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    .section h3 { color: #007c4d; }
+    body { font-family: Arial; background: #eef4f6; padding: 2rem; text-align: center; }
+    input, button { padding: 0.7rem; font-size: 1rem; margin: 0.4rem; border-radius: 6px; border: 1px solid #ccc; width: 90%; max-width: 500px; }
+    .section { background: white; border-radius: 12px; margin: 1rem auto; padding: 1rem; max-width: 700px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
   </style>
 </head>
 <body>
 
-  <h1>🔐 AgriNexus Secure AI & Functions Integration</h1>
+  <h1>🌿 AgriNexus 실시간 작물 예측 + 관리자 인증</h1>
 
   <div class="section">
-    <h3>🌐 Sentinel API 연동 (API Key 보호)</h3>
-    <input id="apiKey" type="password" placeholder="🔑 Sentinel API Key 입력" />
-    <button onclick="accessSentinel()">Sentinel NDVI 분석 보기</button>
-    <iframe id="sentinelFrame" style="display:none;" src="" width="100%" height="400"></iframe>
+    <h3>🔐 Firebase 관리자 로그인</h3>
+    <input id="email" type="email" placeholder="이메일 입력" />
+    <input id="password" type="password" placeholder="비밀번호 입력" />
+    <button onclick="login()">로그인</button>
+    <div id="loginStatus" style="margin-top:1rem; color:#007c4d;"></div>
   </div>
 
   <div class="section">
-    <h3>🌱 작물 분류 모델 선택 (TFLite 기반)</h3>
-    <select id="cropModel">
-      <option value="corn">🌽 옥수수 모델</option>
-      <option value="rice">🌾 벼 모델</option>
-      <option value="tomato">🍅 토마토 모델</option>
-    </select>
-    <button onclick="loadModel()">TensorFlow 예측 페이지 열기</button>
-    <iframe id="modelFrame" style="display:none;" src="" width="100%" height="400"></iframe>
-  </div>
-
-  <div class="section">
-    <h3>☁️ Firebase Functions 호출 (계약 저장)</h3>
-    <input id="contractText" placeholder="계약 내용을 입력하세요" />
-    <button onclick="submitContract()">Firebase에 저장</button>
-    <div id="functionResult" style="color:#007c4d; margin-top:1rem;"></div>
+    <h3>📊 실시간 작물 생육 로그 입력</h3>
+    생육 단계: <input id="growthStage" /><br/>
+    일사량 (W/m²): <input id="sunlight" type="number" /><br/>
+    토양 수분 (%): <input id="moisture" type="number" /><br/>
+    <button onclick="submitLog()">로그 저장 + 예측</button>
+    <div id="predictionOut" style="margin-top:1rem; color:#007c4d;"></div>
   </div>
 
   <script>
-    function accessSentinel() {
-      const key = document.getElementById("apiKey").value;
-      if (key === "YOUR_VALID_SENTINEL_KEY") {
-        const url = "https://custom-sentinel-api-viewer.vercel.app";
-        document.getElementById("sentinelFrame").src = url;
-        document.getElementById("sentinelFrame").style.display = "block";
-      } else {
-        alert("❌ 잘못된 API Key입니다.");
-      }
+    // Firebase 설정
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "your-project.firebaseapp.com",
+      databaseURL: "https://your-project.firebaseio.com",
+      projectId: "your-project"
+    };
+    firebase.initializeApp(firebaseConfig);
+
+    const auth = firebase.auth();
+    const db = firebase.database();
+
+    function login() {
+      const email = document.getElementById("email").value;
+      const pw = document.getElementById("password").value;
+      auth.signInWithEmailAndPassword(email, pw)
+        .then(() => {
+          document.getElementById("loginStatus").innerText = "✅ 로그인 성공";
+        })
+        .catch(err => {
+          document.getElementById("loginStatus").innerText = "❌ 로그인 실패: " + err.message;
+        });
     }
 
-    function loadModel() {
-      const model = document.getElementById("cropModel").value;
-      const urls = {
-        corn: "https://agrinexus-corn-tfmodel.netlify.app",
-        rice: "https://agrinexus-rice-tfmodel.netlify.app",
-        tomato: "https://agrinexus-tomato-tfmodel.netlify.app"
-      };
-      document.getElementById("modelFrame").src = urls[model];
-      document.getElementById("modelFrame").style.display = "block";
-    }
+    function submitLog() {
+      const stage = document.getElementById("growthStage").value;
+      const sun = parseFloat(document.getElementById("sunlight").value);
+      const moist = parseFloat(document.getElementById("moisture").value);
 
-    async function submitContract() {
-      const text = document.getElementById("contractText").value;
-      const res = await fetch("https://us-central1-your-project.cloudfunctions.net/saveContract", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ content: text })
-      });
-      const data = await res.json();
-      document.getElementById("functionResult").innerText = "✅ 저장됨: " + data.status;
+      const ref = db.ref("growthLogs").push();
+      ref.set({ stage, sun, moist, time: new Date().toISOString() });
+
+      // 간단한 AI 예측 로직
+      let result = "적정 성장 예측";
+      if (sun < 200 || moist < 20) result = "성장 저하 위험";
+      else if (sun > 800 && moist > 80) result = "과잉 수분 경고";
+
+      document.getElementById("predictionOut").innerText = "🌱 예측 결과: " + result;
     }
   </script>
 
